--- a/osint/osint_wic_ctf/assets/css/osint.css
+++ b/osint/osint_wic_ctf/assets/css/osint.css
@@ -1,3 +1,7 @@
+.flag-input {
+  background-color: white !important;
+}
+
 .monospace {
   font-family: monospace, courier, sans-serif !important;
 }
